A fully worked version of jdk 11 projects.